        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=17129
        Incorrect style resolution in CSS styled SVG, with multiple style sheets
        Fix the style resolution on the svg by ensuring xml-stylesheet pseudo
        attributes title and alternate are transferred to the stylesheet
        created from the ProcessingInstruction.



Canonical link: https://commits.webkit.org/25236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31664 268f45cc-cd09-0410-ab3c-d52691b4dbfc