WebCore/dom/ProcessingInstruction.h
@@ -78,9 +78,11 @@ private:
     String m_target;
     String m_data;
     String m_localHref;
+    String m_title;
     CachedResource* m_cachedSheet;
     RefPtr<StyleSheet> m_sheet;
     bool m_loading;
+    bool m_alternate;
 #if ENABLE(XSLT)
     bool m_isXSL;
 #endif
